<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_slider_start"
        android:contentDescription="@string/slide_name_desc_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ask_name"
        android:textSize="@dimen/text_size_large"
        android:layout_marginTop="160dp"/>

    <TextView
        android:id="@+id/tv_type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/type_name"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="80dp"/>


    <EditText
        android:id="@+id/et_type_name"
        android:contentDescription="@string/slide_name_et_desc"
        android:autofillHints="@string/ask_name"
        android:labelFor="@id/tv_type_name"
        android:focusable="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:layout_marginBottom="80dp"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/img_btn_name_confirm"
        android:contentDescription="@string/slide_name_img_desc"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:layout_gravity="center"
        android:src="@drawable/ic_check_circle_black_24dp" />

</LinearLayout>