<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_result_card_view"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true"
        android:elevation="8dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/search_result_image_view"
                android:contentDescription="@string/search_image_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <View
                android:contentDescription="@string/search_view_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/scrim_gradient_news"
                />


            <TextView
                android:id="@+id/search_result_article_title"
                android:contentDescription="@string/search_result_title_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/sample_text_short"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/colorWhite"
                android:layout_above="@+id/search_result_article_desc"
                />

            <TextView
                android:id="@+id/search_result_article_desc"
                android:contentDescription="@string/search_result_content_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/search_result_image_view"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sample_text_short"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:textColor="@color/colorWhite" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>